--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,3 +1,11 @@
-h1 {
-    color: blue;
+body {
+    text-align: center;
+}
+
+.login-signup-form {
+    width: 50%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: auto;
+    margin-right: auto;
 }
