--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -2,6 +2,24 @@ body {
     text-align: center;
 }
 
+#title-section {
+    margin: 5% auto 2.5%;
+}
+
 #user-action {
-    margin: 10% auto;
+    margin: 2.5% auto;
+}
+
+.profile-column {
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.logo {
+    width: 3rem;
+    height: 3rem;
+}
+
+.comp-name {
+    border-bottom: .25rem solid #5AF;
 }
