--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -49,8 +49,10 @@ body {
 }
 
 .ci-button {
-    margin-left: .5rem;
+    margin-left: .25rem;
     background-color: white;
+    font-size: small;
+    color: black;
 }
 
 .new-ci-button {
